fix overflow problem mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ ul.unorderedlist-page {
 }
 
 header {
-    width: 100%;
+    width: 100vw;
     background-color: #3F3F3F;
     color: #FFFFFF;
     text-align: center;
@@ -156,6 +156,7 @@ footer a {
 footer .footer-container {
     display: flex;
     justify-content: space-between;
+    max-width: 100%;
 }
 
 /*Main navigation*/
